# usv-ros2-ws

./: seano_dashboard_v7.py
seano_bridge/: package.xml  setup.cfg  setup.py
seano_bridge/launch/: usv_seano.launch.py
seano_bridge/seano_bridge/: gz_dynamic_pose_bridge.py  seano_cloud_bridge.py  seano_cloud_bridge.py.backup
usv_control/: CMakeLists.txt.backup  package.xml  setup.cfg  setup.py
usv_control/config/: bridge_config.yaml  wamv_bridge.yaml
usv_control/launch/: usv_full_system.launch.py  usv_mavros.launch.py  wamv_bridge.launch.py  wamv_control.launch.py
usv_control/usv_control/: autonomous_control.py  gz_waypoint_navigator.py  mavros_seano_bridge.py  seano_mission_executor.py  teleop_keyboard.py
usv_dashboard/: package.xml  setup.cfg  setup.py
usv_dashboard/usv_dashboard/: dashboard_server.py
