<?xml version="1.0"?>
<package format="3">
  <name>seano_bridge</name>
  <version>0.0.1</version>
  <description>SEANO Cloud Bridge</description>
  <maintainer email="dzikri@example.com">dzikri</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
